--- a/bao-chi-noi-ve-tksic.html
+++ b/bao-chi-noi-ve-tksic.html
@@ -226,7 +226,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <img class="page-banner-img" src="imgs/bao-chi/bao-chi-noi-gi-ve-tksic.png" alt="">
+                        <img data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="page-banner-img" src="imgs/bao-chi/bao-chi-noi-gi-ve-tksic.png" alt="">
                     </div>
                     <div class="col-lg-6">
                         <div class="page-banner-box">
@@ -244,7 +244,7 @@
             <div class="page-newspaper">
                 <div class="container">
                     <div class="page-newspaper-list">
-                        <div class="page-newspaper-item">
+                        <div class="page-newspaper-item" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
                             <div class="page-newspaper-item__logo">
                                 <img src="imgs/bao-chi/logo-dan-tri.png">
                             </div>
@@ -253,7 +253,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat </p>
                             </div>
                         </div>
-                        <div class="page-newspaper-item">
+                        <div class="page-newspaper-item" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
                             <div class="page-newspaper-item__logo">
                                 <img src="imgs/bao-chi/logo-zing-me.png">
                             </div>
@@ -262,7 +262,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat </p>
                             </div>
                         </div>
-                        <div class="page-newspaper-item">
+                        <div class="page-newspaper-item" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
                             <div class="page-newspaper-item__logo">
                                 <img src="imgs/bao-chi/logo-cafef.png">
                             </div>
@@ -271,7 +271,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat </p>
                             </div>
                         </div>
-                        <div class="page-newspaper-item">
+                        <div class="page-newspaper-item" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
                             <div class="page-newspaper-item__logo">
                                 <img src="imgs/bao-chi/logo-vn-economy.png">
                             </div>
@@ -280,7 +280,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat </p>
                             </div>
                         </div>
-                        <div class="page-newspaper-item">
+                        <div class="page-newspaper-item" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
                             <div class="page-newspaper-item__logo">
                                 <img src="imgs/bao-chi/logo-tai-chinh.png">
                             </div>
