--- a/chuyen-gia.html
+++ b/chuyen-gia.html
@@ -238,7 +238,7 @@
                             </div>
                         </div>
                         <div class="page-no-home__expert-box-child">
-                            <img class="page-no-home__expert-img" src="imgs/chau-pham.png" alt="">
+                            <img class="page-no-home__expert-img" src="imgs/chau-pham.png" alt=""  data-aos="fade-left">
                         </div>
                     </div>
                     <div class="page-no-home__expert-box">
@@ -250,7 +250,7 @@
                 <div class="page-no-home__expert">
                     <div class="page-no-home__expert-box">
                         <div class="page-no-home__expert-box-child">
-                            <img class="page-no-home__expert-img" src="imgs/dat-truong.png" alt="">
+                            <img class="page-no-home__expert-img" src="imgs/dat-truong.png" alt="" data-aos="fade-right">
                         </div>
                         <div class="page-no-home__expert-box-child text-right">
                              <div class="page-no-home__expert-title">
