--- a/danh-muc-dau-tu.html
+++ b/danh-muc-dau-tu.html
@@ -238,7 +238,7 @@
                         </div>
                         <div class="service-page-box-child">
                             <div class="service-page-box-img">
-                                <img src="imgs/vntop/danh-muc-dau-tu.png" alt="">
+                                <img src="imgs/vntop/danh-muc-dau-tu.png" alt="" data-aos="fade-up">
                             </div>
                         </div>
                     </div>
