--- a/dao-tao-chung-khoan.html
+++ b/dao-tao-chung-khoan.html
@@ -243,7 +243,7 @@
                         </div>
                         <div class="service-page-box-child">
                             <div class="service-page-box-img">
-                                <img src="imgs/vntop/dao-tao-chung-khoan.png" alt="">
+                                <img src="imgs/vntop/dao-tao-chung-khoan.png" alt="" data-aos="fade-left">
                             </div>
                         </div>
                     </div>
