--- a/lai-suat-co-dinh.html
+++ b/lai-suat-co-dinh.html
@@ -257,26 +257,26 @@
                                     </div>
                                     <div class="page-vntop__register-list">
                                         <div class="page-vntop__register-item">
-                                            <img src="imgs/vntop/img-lai-suat.png" alt="">
+                                            <img src="imgs/vntop/img-lai-suat.png" alt="" data-aos="zoom-in">
                                             <p>Lên đến 10,50%/năm</p>
                                         </div>
                                         <div class="page-vntop__register-item">
-                                            <img src="imgs/vntop/img-thanh-toan-loi-nhuan.png" alt="">
+                                            <img src="imgs/vntop/img-thanh-toan-loi-nhuan.png" alt="" data-aos="zoom-in">
                                             <p>Cuối kỳ hoặc 3 tháng/lần</p>
                                         </div>
                                         <div class="page-vntop__register-item">
-                                            <img src="imgs/vntop/img-thoi-han-rut-von.png" alt="">
+                                            <img src="imgs/vntop/img-thoi-han-rut-von.png" alt="" data-aos="zoom-in">
                                             <p>Linh hoạt</p>
                                         </div>
                                         <div class="page-vntop__register-item">
-                                            <img src="imgs/vntop/img-lai-suat.png" alt="">
+                                            <img src="imgs/vntop/img-lai-suat.png" alt="" data-aos="zoom-in">
                                             <p>1.000.000 VNĐ</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <div class="page-vntop__register-box">
+                                <div class="page-vntop__register-box" data-aos="fade-up" data-aos-anchor-placement="top-center">
                                     <div class="page-vntop__register-box-title">
                                         <h4>ĐĂNG KÝ</h4>
                                         <p>Hãy để lại thông tin của bạn, chúng tôi sẽ nhanh chóng liên hệ lại để tư vấn sâu hơn về các cơ hội đầu tư hấp dẫn cùng TKSIC</p>
@@ -313,19 +313,19 @@
                             <img src="imgs/dot.png" height="6" width="53" alt="">
                         </div>
                         <div class="page-vntop__fixed-interest__list">
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item"  data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Cam kết lợi nhuận hấp dẫn</h4>
                                 </div>
                                 <p>Với lãi suất từ 5,30-10,50%/năm, dù bạn đang có nguồn vốn nhàn rỗi trong 1 tháng cũng vẫn có thể tạo ra mức sinh lời hấp dẫn.</p>
                             </div>
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item" data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Rút vốn linh hoạt</h4>
                                 </div>
                                 <p>Khi rút tiền trước hạn hoặc đầu tư không kỳ hạn, bạn vẫn được hưởng lãi suất lên đến 2%, cao gấp nhiều lần so với lãi suất không kỳ hạn bình quân của ngân hàng thương mại (0,2%).</p>
                             </div>
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item" data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Sinh lời an toàn</h4>
                                 </div>
@@ -352,7 +352,7 @@
                             </div>
                             <div class="page-vntop__note-child">
                                 <div class="page-vntop__note-img">
-                                    <img src="imgs/vntop/luu-y-quan-trong.png" alt="">
+                                    <img src="imgs/vntop/luu-y-quan-trong.png" alt="" data-aos="fade-left">
                                 </div>
                             </div>
                         </div>
