--- a/nguyen-tac-dau-tu.html
+++ b/nguyen-tac-dau-tu.html
@@ -237,7 +237,7 @@
                         <img src="imgs/nguyen-tac/icon-vuong.png" alt="">
                     </div>
                     <div class="investment-principles__box1-img">
-                        <img src="imgs/nguyen-tac/nguyen-tac-1.png" alt="">
+                        <img src="imgs/nguyen-tac/nguyen-tac-1.png" alt="" data-aos="fade-left">
                     </div>
                     <div class="investment-principles__box1-text">
                         <div class="container">
@@ -252,7 +252,7 @@
                     <div class="container">
                         <div class="investment-principles__box2-parent">
                             <div class="investment-principles__box2-child">
-                                <img src="imgs/nguyen-tac/dollar.png" height="438" width="593" alt="">
+                                <img src="imgs/nguyen-tac/dollar.png" height="438" width="593" alt="" data-aos="fade-right">
                             </div>
                             <div class="investment-principles__box2-child">
                                 <h3>Đầu tư theo đà tăng trưởng <br>Phương pháp đầu tư tối ưu</h3>
@@ -271,7 +271,7 @@
                     <div class="container">
                         <div class="investment-principles__box3-parent">
                             <div class="investment-principles__box3-child">
-                                <img src="imgs/nguyen-tac/nt-2.png" alt="">
+                                <img src="imgs/nguyen-tac/nt-2.png" alt="" data-aos="fade-left">
                             </div>
                             <div class="investment-principles__box3-child">
                                 <h3>Các sản phẩm đầu tư từ TKSIC</h3>
@@ -286,7 +286,7 @@
                 <div class="investment-principles__box4">
                     <div class="container">
                         <div class="investment-principles__box4-title">
-                            <img src="imgs/nguyen-tac/80.png" height="291" width="258" alt="">
+                            <img src="imgs/nguyen-tac/80.png" height="291" width="258" alt="" data-aos="fade-right">
                             <h3>nhà đầu tư đã có lãi <br>khi đồng hành cùng TKSIC</h3>
                         </div>
                         <p>Bằng chiến lược đầu tư được nghiên cứu kỹ lưỡng, khoa học, TKSIC đã giúp cho nhiều nhà đầu tư có lãi chỉ trong thời gian ngắn. Cụ thể, đã có khoảng 80% nhà đầu tư đến với TKSIC có lãi từ 16 – 17% chỉ sau 8 – 9 phiên giao dịch. Kết quả khả quan này cho thấy phương pháp đầu tư theo đà tăng trưởng mà TKSIC lựa chọn và theo đuổi là hoàn toàn đúng đắn.</p>
