--- a/tu-van-quan-ly-dau-tu-rui-ro.html
+++ b/tu-van-quan-ly-dau-tu-rui-ro.html
@@ -244,7 +244,7 @@
                         </div>
                         <div class="service-page-box-child">
                             <div class="service-page-box-img">
-                                <img src="imgs/vntop/dich-vu-tu-van-dau-tu-rui-ro.png" alt="">
+                                <img src="imgs/vntop/dich-vu-tu-van-dau-tu-rui-ro.png" alt="" data-aos="fade-left">
                             </div>
                         </div>
                     </div>
