--- a/ve-chung-toi.html
+++ b/ve-chung-toi.html
@@ -234,7 +234,7 @@
                             </div>
                        </div>
                        <div class="col-lg-6">
-                           <img class="general-introduction__img" src="imgs/about/about-us-video.png"  alt="">
+                           <img class="general-introduction__img" src="imgs/about/about-us-video.png"  alt="" data-aos="zoom-in">
                        </div>
                    </div>
                </div>
@@ -251,7 +251,7 @@
                        </div>
                        <div class="vision-and-mission-box-child">
                             <div class="vision-and-mission__img">
-                               <img src="imgs/about/tam-nhin-su-menh.png"  alt="">
+                               <img src="imgs/about/tam-nhin-su-menh.png"  alt="" data-aos="fade-left">
                             </div>
                        </div>
                    </div>
@@ -262,7 +262,7 @@
                    <div class="strategic-commitment-box">
                        <div class="strategic-commitment-box-child">
                             <div class="strategic-commitment__img">
-                               <img src="imgs/about/cam-ket-chien-luoc.png" alt="">
+                               <img src="imgs/about/cam-ket-chien-luoc.png" alt="" data-aos="fade-right">
                             </div>
                        </div>
                        <div class="strategic-commitment-box-child">
