--- a/but-pha.html
+++ b/but-pha.html
@@ -226,7 +226,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <img class="page-banner-img" src="imgs/vntop/but-pha-banner.png" alt="">
+                        <img data-aos="zoom-in" class="page-banner-img" src="imgs/vntop/but-pha-banner.png" alt="">
                     </div>
                     <div class="col-lg-6">
                         <div class="page-banner-box">
@@ -257,15 +257,15 @@
                                         <p>Đầu tư Bứt phá là sản phẩm đầu tư ưu tiên nhu cầu tăng trưởng vốn của khách hàng. Mục tiêu của Đầu tư Bứt phá là thiết kế phương án đầu tư chuyên biệt, tùy vào khẩu vị rủi ro và kỳ vọng đầu tư khác nhau của từng khách hàng. Chúng tôi tìm kiếm lợi suất vượt trội dựa trên danh mục đầu tư mở rộng trên các thị trường cổ phiếu, trái phiếu, hàng hóa, hợp đồng phái sinh.</p>
                                     </div>
                                     <div class="page-vntop__register-list">
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-loi-nhuan-ky-vong.png" alt="">
                                             <p>20%/quý</p>
                                         </div>
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-thoi-gian-nam-giu-hieu-qua.png" alt="">
                                             <p>Theo tùy chọn nhà đầu tư</p>
                                         </div>
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-von-toi-thieu.png" alt="">
                                             <p>10.000.000 VNĐ</p>
                                         </div>
@@ -274,7 +274,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <div class="page-vntop__register-box">
+                                <div class="page-vntop__register-box" data-aos="fade-up" data-aos-anchor-placement="top-center">
                                     <div class="page-vntop__register-box-title">
                                         <h4>ĐĂNG KÝ</h4>
                                         <p>Hãy để lại thông tin của bạn, chúng tôi sẽ nhanh chóng liên hệ lại để tư vấn sâu hơn về các cơ hội đầu tư hấp dẫn cùng TKSIC</p>
@@ -315,19 +315,19 @@
                             </div>
                         </div>
                         <div class="page-vntop__fixed-interest__list">
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item" data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Vốn khởi điểm hấp dẫn</h4>
                                 </div>
                                 <p>Từ mức vốn tối thiểu 10 triệu đồng, bạn có thể dễ dàng sở hữu danh mục đầu tư đa dạng với những cổ phiếu hàng đầu Việt Nam.</p>
                             </div>
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item" data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Thanh khoản cao</h4>
                                 </div>
                                 <p>Khách hàng có thể dễ dàng mua, bán, chuyển nhượng hoặc quyết định đầu tư thêm bất kỳ lúc nào mà không giới hạn giá trị đầu tư.</p>
                             </div>
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item" data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Lợi nhuận kỳ vọng hấp dẫn</h4>
                                 </div>
@@ -358,7 +358,7 @@
                             </div>
                             <div class="page-vntop__note-child">
                                 <div class="page-vntop__note-img">
-                                    <img src="imgs/vntop/luu-y-quan-trong.png" alt="">
+                                    <img data-aos="fade-left" src="imgs/vntop/luu-y-quan-trong.png" alt="">
                                 </div>
                             </div>
                         </div>
