--- a/vn-top-20.html
+++ b/vn-top-20.html
@@ -257,15 +257,15 @@
                                         <p>VNTop 20 là phương án đầu tư tập trung vào chiến lược đầu tư cổ phiếu vốn hóa lớn. Mục tiêu của VNTop 20 là tìm kiếm tăng trưởng từ nhóm các công ty đại diện trong bộ chỉ số VN30, do TKSIC chọn lọc theo những tiêu chí kỹ thuật gắt gao. Song song đó, chúng tôi theo sát hiệu suất cổ phiếu và tiến hành tái phân bổ vốn vào nhóm cổ phiếu được chọn lựa dựa vào thứ hạng điểm dòng tiền định kỳ mỗi tuần.</p>
                                     </div>
                                     <div class="page-vntop__register-list">
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-loi-nhuan-ky-vong.png" alt="">
                                             <p>30%/năm</p>
                                         </div>
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-thoi-gian-nam-giu-hieu-qua.png" alt="">
                                             <p>Từ 1 tháng trở lên</p>
                                         </div>
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-von-toi-thieu.png" alt="">
                                             <p>10.000.000 VNĐ</p>
                                         </div>
@@ -274,7 +274,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <div class="page-vntop__register-box">
+                                <div class="page-vntop__register-box"  data-aos="fade-up" data-aos-anchor-placement="top-center">
                                     <div class="page-vntop__register-box-title">
                                         <h4>ĐĂNG KÝ</h4>
                                         <p>Hãy để lại thông tin của bạn, chúng tôi sẽ nhanh chóng liên hệ lại để tư vấn sâu hơn về các cơ hội đầu tư hấp dẫn cùng TKSIC</p>
@@ -315,19 +315,19 @@
                             </div>
                         </div>
                         <div class="page-vntop__fixed-interest__list">
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item"  data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Vốn khởi điểm hấp dẫn</h4>
                                 </div>
                                 <p>Từ mức vốn tối thiểu 10 triệu đồng, bạn có thể dễ dàng sở hữu danh mục đầu tư đa dạng với những cổ phiếu hàng đầu Việt Nam.</p>
                             </div>
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item"  data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Thanh khoản cao</h4>
                                 </div>
                                 <p>Khách hàng có thể dễ dàng mua, bán, chuyển nhượng hoặc quyết định đầu tư thêm bất kỳ lúc nào mà không giới hạn giá trị đầu tư.</p>
                             </div>
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item"  data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Lợi nhuận kỳ vọng hấp dẫn</h4>
                                 </div>
@@ -355,7 +355,7 @@
                             </div>
                             <div class="page-vntop__note-child">
                                 <div class="page-vntop__note-img">
-                                    <img src="imgs/vntop/luu-y-quan-trong.png" alt="">
+                                    <img src="imgs/vntop/luu-y-quan-trong.png" alt="" data-aos="fade-left">
                                 </div>
                             </div>
                         </div>
