--- a/vn-top-all.html
+++ b/vn-top-all.html
@@ -256,15 +256,15 @@
                                         <p>VNTop All là phương án đầu tư tập trung vào chiến lược đầu tư linh hoạt trên toàn thị trường chứng khoán Việt Nam. Mục tiêu của VNTop All là tìm kiếm tăng trưởng từ các cổ phiếu có thanh khoản tốt và có đà tăng trưởng tốt nhất thị trường, do TKSIC chọn lọc theo những tiêu chí kỹ thuật gắt gao. Song song đó, chúng tôi theo sát hiệu suất cổ phiếu và tiến hành tái phân bổ vốn vào nhóm cổ phiếu được chọn lựa dựa vào thứ hạng điểm dòng tiền định kỳ mỗi tuần.</p>
                                     </div>
                                     <div class="page-vntop__register-list">
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-loi-nhuan-ky-vong.png" alt="">
                                             <p>35%/năm</p>
                                         </div>
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-thoi-gian-nam-giu-hieu-qua.png" alt="">
                                             <p>Từ 2 tuần trở lên</p>
                                         </div>
-                                        <div class="page-vntop__register-item">
+                                        <div class="page-vntop__register-item" data-aos="zoom-in">
                                             <img src="imgs/vntop/vn-top-10-von-toi-thieu.png" alt="">
                                             <p>10.000.000 VNĐ</p>
                                         </div>
@@ -273,7 +273,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <div class="page-vntop__register-box">
+                                <div class="page-vntop__register-box" data-aos="fade-up" data-aos-anchor-placement="top-center">
                                     <div class="page-vntop__register-box-title">
                                         <h4>ĐĂNG KÝ</h4>
                                         <p>Hãy để lại thông tin của bạn, chúng tôi sẽ nhanh chóng liên hệ lại để tư vấn sâu hơn về các cơ hội đầu tư hấp dẫn cùng TKSIC</p>
@@ -314,19 +314,19 @@
                             </div>
                         </div>
                         <div class="page-vntop__fixed-interest__list">
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item" data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Vốn khởi điểm hấp dẫn</h4>
                                 </div>
                                 <p>Từ mức vốn tối thiểu 10 triệu đồng, bạn có thể dễ dàng sở hữu danh mục đầu tư đa dạng với những cổ phiếu hàng đầu Việt Nam.</p>
                             </div>
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item" data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Thanh khoản cao</h4>
                                 </div>
                                 <p>Khách hàng có thể dễ dàng mua, bán, chuyển nhượng hoặc quyết định đầu tư thêm bất kỳ lúc nào mà không giới hạn giá trị đầu tư.</p>
                             </div>
-                            <div class="page-vntop__fixed-interest__item">
+                            <div class="page-vntop__fixed-interest__item" data-aos="zoom-in-up">
                                 <div class="page-vntop__fixed-interest__item-rounded">
                                     <h4>Lợi nhuận kỳ vọng hấp dẫn</h4>
                                 </div>
@@ -354,7 +354,7 @@
                             </div>
                             <div class="page-vntop__note-child">
                                 <div class="page-vntop__note-img">
-                                    <img src="imgs/vntop/luu-y-quan-trong.png" alt="">
+                                    <img src="imgs/vntop/luu-y-quan-trong.png" alt="" data-aos="fade-left" data-aos="zoom-in-up">
                                 </div>
                             </div>
                         </div>
