--- a/nhan-dinh-thi-truong.html
+++ b/nhan-dinh-thi-truong.html
@@ -236,14 +236,14 @@
                     <div class="market-comment__list">
                         <div class="market-comment__child">
                             <div class="market-comment__child-img">
-                                <img src="imgs/tin-tuc/img1.png" alt="">
+                                <a href="#"><img src="imgs/tin-tuc/img1.png" alt=""></a>
                             </div>
                             <div class="market-comment__child-text">
                                 <div>
                                     <div class="market-comment__child-text__date">
                                         <i class="ion-play" style=""></i> 29.11.2021
                                     </div>
-                                    <h4  class="market-comment__child-text__title">Thị trường chứng khoán chìm trong sắc đỏ phiên đầu tuần</h4>
+                                    <h4  class="market-comment__child-text__title"><a href="#">Thị trường chứng khoán chìm trong sắc đỏ phiên đầu tuần</a></h4>
                                 </div>
                             </div>
                         </div>
@@ -256,7 +256,7 @@
                                     <div class="market-comment__child-text__date">
                                         <i class="ion-play" style=""></i> 29.11.2021
                                     </div>
-                                    <h4  class="market-comment__child-text__title">Nhà đầu tư chạy theo cổ phiếu vì những lời đồn thổi và cái kết “đắng”</h4>
+                                    <h4  class="market-comment__child-text__title"><a href="#">Nhà đầu tư chạy theo cổ phiếu vì những lời đồn thổi và cái kết “đắng”</a></h4>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                                     <div class="market-comment__child-text__date">
                                         <i class="ion-play" style=""></i> 29.11.2021
                                     </div>
-                                    <h4  class="market-comment__child-text__title">Lịch sự kiện và tin vắn chứng khoán ngày 24/11</h4>
+                                    <h4  class="market-comment__child-text__title"><a href="#">Lịch sự kiện và tin vắn chứng khoán ngày 24/11</a></h4>
                                 </div>
                             </div>
                         </div>
@@ -282,7 +282,7 @@
                                     <div class="market-comment__child-text__date">
                                         <i class="ion-play" style=""></i> 29.11.2021
                                     </div>
-                                    <h4  class="market-comment__child-text__title">Review 4 cuốn sách hay về đầu tư tài chính </h4>
+                                    <h4  class="market-comment__child-text__title"><a href="#">Review 4 cuốn sách hay về đầu tư tài chính </a></h4>
                                 </div>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
                                     <div class="market-comment__child-text__date">
                                         <i class="ion-play" style=""></i> 29.11.2021
                                     </div>
-                                    <h4  class="market-comment__child-text__title">Vốn ít có nên đầu tư chứng khoán không?</h4>
+                                    <h4  class="market-comment__child-text__title"><a href="#">Vốn ít có nên đầu tư chứng khoán không?</a></h4>
                                 </div>
                             </div>
                         </div>
@@ -308,7 +308,7 @@
                                     <div class="market-comment__child-text__date">
                                         <i class="ion-play" style=""></i> 29.11.2021
                                     </div>
-                                    <h4  class="market-comment__child-text__title">Góc nhìn chuyên gia: Thanh khoản kỷ lục 54.000 tỷ, thị trường khó giảm sâu vì “tiền khôn” chốt lời cũng không biết đi đâu</h4>
+                                    <h4  class="market-comment__child-text__title"><a href="#">Góc nhìn chuyên gia: Thanh khoản kỷ lục 54.000 tỷ, thị trường khó giảm sâu vì “tiền khôn” chốt lời cũng không biết đi đâu</a></h4>
                                 </div>
                             </div>
                         </div>
