--- a/ve-chung-toi.html
+++ b/ve-chung-toi.html
@@ -281,7 +281,7 @@
                         <div class="capital-mangement-title">
                             <h3>Các Đối Tác Của Chúng Tôi</h3>
                             <img src="imgs/dot.png" height="6" width="53" alt="">
-                            <p>Được thành lập năm 2021, TKSIC hướng đến mục tiêu trở thành công ty chuyên cung cấp các sản phẩm và dịch vụ tài chính có hiệu quả vượt trội và đẳng cấp quốc tế tại thị trường Việt Nam. Với đội ngũ chuyên gia đầu tư tài chính ưu tú cùng hệ thống công nghệ hiện đại, đặc biệt là ứng dụng trí tuệ nhân tạo trong quản lý tài sản và danh mục đầu tư, TKSIC mang đến những giải pháp mới mẻ, toàn diện và chuyên biệt nhất về đầu tư thông minh, đem lại giá trị bền vững cho khách hàng. </p>
+                            <p>Chúng tôi cam kết cung cấp các giải pháp đầu tư và quản lý vốn minh bạch với quy trình quản trị được tổ chức nghiêm ngặt và được giám sát chặc chẻ bởi các tổ chức hàng đầu Việt Nam . Tại TKSIC chúng tôi đặt tính an toàn vốn lên hàng đầu và ưu tiên tối ưu hóa lợi nhuận cho các khách hàng của mình.</p>
                         </div>
                     </div>
                     <div class="partner-slider" data-aos="zoom-in">
@@ -307,19 +307,19 @@
                             <a href="#">
                                 <div class="item">
                                     <img src="imgs/logo-ncsc.png" alt="">
-                                    <p>Đơn vị kiểm toán hàng đầu Việt Nam ITOGroup: Cung cấp báo cáo kiểm toán độc lập hằng quý</p>
+                                    <p>Trung tâm Giám sát an toàn không gian mạng quốc gia (NCSC): Đảm bảo bảo mật hệ thống dữ liệu và thông tin khách hàng</p>
                                 </div>
                             </a>
                             <a href="#">
                                 <div class="item">
                                    <img src="imgs/logo-triminh.png" alt="">
-                                   <p>Đơn vị kiểm toán hàng đầu Việt Nam ITOGroup: Cung cấp báo cáo kiểm toán độc lập hằng quý</p>
+                                   <p>Công ty Luật Trí Minh: Bảo trợ pháp lý cho khách hàng và TKSIC</p>
                                 </div>
                             </a>
                             <a href="#">
                                 <div class="item">
                                     <img src="imgs/logo-techcombank.png" alt="">
-                                    <p>Đơn vị kiểm toán hàng đầu Việt Nam ITOGroup: Cung cấp báo cáo kiểm toán độc lập hằng quý</p>
+                                    <p>Ngân hàng Techcombank: Bảo lãnh thanh toán</p>
                                 </div>
                             </a>
                         </div>
