--- a/index.html
+++ b/index.html
@@ -702,6 +702,9 @@
                         <div class="item">
                             <a href="#"><img src="imgs/logo-techcombank.png" alt=""></a>
                         </div>
+                        <div class="item">
+                            <a href="#"><img src="imgs/logo-vnpay.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
