--- a/ve-chung-toi.html
+++ b/ve-chung-toi.html
@@ -318,6 +318,12 @@
                             </a>
                             <a href="#">
                                 <div class="item">
+                                    <img src="imgs/logo-vnpay.png" alt="">
+                                    <p>VNPay: Hỗ trợ giải pháp thanh toán toàn diện</p>
+                                </div>
+                            </a>
+                            <a href="#">
+                                <div class="item">
                                     <img src="imgs/logo-techcombank.png" alt="">
                                     <p>Ngân hàng Techcombank: Bảo lãnh thanh toán</p>
                                 </div>
