--- a/client/hoa-hong.html
+++ b/client/hoa-hong.html
@@ -314,7 +314,7 @@
     <div class="modal-dialog modal-dialog-centered modal-md" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" >MỞ TÀI KHOẢN ĐẦU TƯ</h5>
+                <h5 class="modal-title" >Chi tiết hoa hồng đã nhận</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
                 </button>
