--- a/client/mo-tai-khoan-dau-tu-1.html
+++ b/client/mo-tai-khoan-dau-tu-1.html
@@ -273,6 +273,70 @@
                         <label for="">Số tiền đầu tư</label>
                         <input type="text" class="form-control" placeholder="" value="">
                     </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="">Kỳ hạn</label>
+                                <select name="" class="form-control">
+                                    <option value="">3 tháng</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="">Lãi suất</label>
+                                <input type="text" class="form-control" placeholder="" value="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Ngày đáo hạn</label>
+                        <input type="text" class="form-control" disabled placeholder="" value="01/01/2021">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Rút trước hạn</label>
+                        <input type="text" class="form-control"  placeholder="" value="Lãi suất 2%">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Lãi cuối kỳ</label>
+                        <input type="text" class="form-control"  placeholder="" value="">
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn-sb">Mở tài khoản</button>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="modal fade modal-general" id="open-account-risk" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" >MỞ TÀI KHOẢN ĐẦU TƯ</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fal fa-times"></i></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="" class="form-open-account">
+                    <div class="form-group">
+                        <label for="">Tên gói đầu tư</label>
+                        <input type="text" class="form-control" placeholder="" value="Lãi suất đầu tư">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Số tiền khởi tạo</label>
+                        <input type="text" class="form-control" placeholder="" value="100.000.000đ">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Phí khởi tạo</label>
+                        <input type="text" class="form-control" placeholder="" value="2%">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Số tiền đầu tư</label>
+                        <input type="text" class="form-control" placeholder="" value="">
+                    </div>
                     <div class="form-group">
                         <label for="">Dịch vụ bảo hiểm</label>
                         <select name="" class="form-control">
@@ -330,7 +394,7 @@
                     <p>Sản phẩm Đầu tư Bức phá chỉ dành cho Nhà đầu tư có kinh nghiệm với mức Lợi nhuận kỳ vọng và khả năng chịu rủi ro lớn trên thị trường tài chính. Vui lòng liên hệ Chuyên viên tư vấn để biết thêm chi tiết.</p>
                     <div class="investment-popup-btn">
                         <a href="#">Liên hệ tư vấn</a>
-                        <a href="#">Chấp nhận rủi ro</a>
+                        <a href="javascript:void(0);" data-toggle="modal" data-target="#open-account-risk" data-dismiss="modal" aria-label="Close">Chấp nhận rủi ro</a>
                     </div>
                 </div>
             </div>
