--- a/client/mo-tai-khoan-dau-tu-1.html
+++ b/client/mo-tai-khoan-dau-tu-1.html
@@ -147,7 +147,7 @@
                                                 </ul>
                                             </div>
                                             <a href="" class="btn-open-account" data-toggle="modal"
-                                               data-target="#open-vntop">Mở tài khoản</a>
+                                               data-target="#open-account">Mở tài khoản</a>
                                         </div>
                                         <div class="item">
                                             <div class="icon"><img src="images/p_vntop20.png" alt=""></div>
@@ -159,7 +159,7 @@
                                                 </ul>
                                             </div>
                                             <a href="" class="btn-open-account" data-toggle="modal"
-                                               data-target="#open-vntop">Mở tài khoản</a>
+                                               data-target="#open-account">Mở tài khoản</a>
                                         </div>
                                         <div class="item">
                                             <div class="icon"><img src="images/p_vntopall.png" alt=""></div>
@@ -171,7 +171,7 @@
                                                 </ul>
                                             </div>
                                             <a href="" class="btn-open-account" data-toggle="modal"
-                                               data-target="#open-vntop">Mở tài khoản</a>
+                                               data-target="#open-account">Mở tài khoản</a>
                                         </div>
                                         <div class="item">
                                             <div class="icon"><img src="images/p_dtbp.png" alt=""></div>
@@ -353,7 +353,7 @@
                       </label>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button class="btn-sb">Mở tài khoản</button>
+                        <button class="btn-sb" data-toggle="modal" data-target="#open-vntop" data-dismiss="modal" aria-label="Close">Mở tài khoản</button>
                     </div>
                 </form>
             </div>
