--- a/client/mo-tai-khoan-dau-tu-1.html
+++ b/client/mo-tai-khoan-dau-tu-1.html
@@ -349,7 +349,7 @@
                     </div>
                     <div class="form-check">
                       <label class="form-check-label">
-                        <input type="radio" class="form-check-input">Bằng việc click vào ô này. Tôi xác nhận tôi đã hiểu rõ sản phẩm Bức phá và toàn bộ rủi ro đi kèm <br>trên thị trường tài chính.
+                        <input type="radio" class="form-check-input">Bằng việc click vào ô này. Tôi xác nhận tôi đã hiểu rõ sản phẩm Bứt phá và toàn bộ rủi ro đi kèm <br>trên thị trường tài chính.
                       </label>
                     </div>
                     <div class="d-flex justify-content-center">
@@ -372,7 +372,7 @@
             <div class="modal-body">
                 <div class="vntop-popup">
                     <img src="images/popup-3.png" alt="">
-                    <p>Yêu cầu mở tài khoản Đầu tư Bức Phá của Quý khách đang được kiểm tra và xử lý. Vui lòng liên hệ TKSIC để được hỗ trợ khi cần.</p>
+                    <p>Yêu cầu mở tài khoản Đầu tư Bứt Phá của Quý khách đang được kiểm tra và xử lý. Vui lòng liên hệ TKSIC để được hỗ trợ khi cần.</p>
                 </div>
             </div>
 
@@ -391,7 +391,7 @@
                 <div class="investment-popup">
                     <img src="images/img-lscd.png" alt="">
                     <h4>ĐẦU TƯ BỨT PHÁ</h4>
-                    <p>Sản phẩm Đầu tư Bức phá chỉ dành cho Nhà đầu tư có kinh nghiệm với mức Lợi nhuận kỳ vọng và khả năng chịu rủi ro lớn trên thị trường tài chính. Vui lòng liên hệ Chuyên viên tư vấn để biết thêm chi tiết.</p>
+                    <p>Sản phẩm Đầu tư Bứt phá chỉ dành cho Nhà đầu tư có kinh nghiệm với mức Lợi nhuận kỳ vọng và khả năng chịu rủi ro lớn trên thị trường tài chính. Vui lòng liên hệ Chuyên viên tư vấn để biết thêm chi tiết.</p>
                     <div class="investment-popup-btn">
                         <a href="#">Liên hệ tư vấn</a>
                         <a href="javascript:void(0);" data-toggle="modal" data-target="#open-account-risk" data-dismiss="modal" aria-label="Close">Chấp nhận rủi ro</a>
