--- a/client/nap-tien--1.html
+++ b/client/nap-tien--1.html
@@ -129,7 +129,7 @@
                                     </ul>
                                     <div class="tab-content">
 
-                                        <div class="tab-pane container active" id="transfer">
+                                        <div class="tab-pane active" id="transfer">
                                             <form action="">
                                                 <h4 class="withdraw-money__bank-title">Chọn ngân hàng nhận</h4>
                                                 <div class="withdraw-money__bank">
@@ -165,7 +165,7 @@
                                                 </div>
                                             </form>
                                         </div>
-                                        <div class="tab-pane container fade" id="interbank">
+                                        <div class="tab-pane fade" id="interbank">
                                             <form action="">
                                                 <h4 class="withdraw-money__bank-title">Khách hàng vui lòng sửa dụng VNPAY để nạp tiền <br>qua các phương thức sau</h4>
                                                 <div class="withdraw-money__form">
