--- a/client/nap-tien--1.html
+++ b/client/nap-tien--1.html
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                     <div class="referral">
-                        <a href=""><img src="images/referral.jpg" alt=""></a>
+                        <a href=""><img src="images/invite-friend.png" alt=""></a>
                     </div>
                 </div>
             </div>
