--- a/ho-tro.html
+++ b/ho-tro.html
@@ -41,8 +41,8 @@
                 </div>
                 <nav class="main-nav">
                     <ul>
-                        <li class="active"><a href="index.html">Trang chủ</a></li>
-                        <li>
+                        <li><a href="index.html">Trang chủ</a></li>
+                        <li class="active">
                             <a href="ve-chung-toi.html">Về TKSic</a>
                             <ul class="submenu">
                                 <ul class="submenu-box">
