--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                             </div>
                             <p class="easy-investment-box-child-border__p3">Sản phẩm đầu tư</p>
                             <div class="easy-investment-box-child__group">
-                                <a href="#">Lãi suất cố định</a>
+                                <a class="active" href="#">Lãi suất cố định</a>
                                 <a href="#">VNTop 10</a>
                                 <a href="#">VNTop 20</a>
                                 <a href="#">VNTop All</a>
