--- a/ho-tro.html
+++ b/ho-tro.html
@@ -229,6 +229,18 @@
         </div>
     </header>
     <main>
+        <section class="page-banner support">
+            <div class="container">
+                <div class="support-box">
+                    <h3>Chào mừng bạn đến với trang hỗ trợ <br>của TKSIC</h3>
+                        <div class="support-box-input">
+                            <input type="text" placeholder="Chúng tôi giúp được gì cho bạn?">
+                            <i class="ion-ios-search"></i>
+                        </div>
+                        <p>Gọi Holine để được hỗ trọ và tư vấn 24/7: 08 3656 3656</p>
+                </div>
+            </div>
+        </section>
         <section class="page-no-home">
             <div class="support">
                 <div class="container">
