--- a/nhan-dinh-thi-truong-chi-tiet.html
+++ b/nhan-dinh-thi-truong-chi-tiet.html
@@ -243,7 +243,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="market-comment-detail-title">
-                                <h4>Thị trường chứng khoán chìm
+                                <h4>Thị trường chứng khoán chìm <br>
                                     trong sắc đỏ phiên đầu tuần</h4>
                                 <div class="market-comment__child-text__date">
                                     <i class="ion-play" style=""></i> 29.11.2021
@@ -292,7 +292,10 @@
                             hàng khi nhóm này tăng mạnh.</p>
                     </div>
                 </div>
-                <div class="market-comment__icon">
+                <div class="market-comment-detail__icon">
+                    <img src="imgs/vntop/danh-muc-vuong.png" alt="">
+                </div>
+                <div class="market-comment-detail__icon-bg">
                     <img src="imgs/tin-tuc/nhan-dinh-thi-truong-earth.png" alt="">
                 </div>
             </div>
